# zeyrek

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  ci.yml  publish_to_pypi.yml  zeyrek.yml
docs/: conf.py  index.html  index.md  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: readme_examples.py  text.txt
tests/: test_analysis.py  test_conditions.py
zeyrek/: __init__.py  attributes.py  conditions.py  formatters.py  lexicon.py  lexicon_helpers.py  morphology.py  morphotactics.py  rulebasedanalyzer.py  tr.py
zeyrek/resources/tr/: abbreviations.dict  master-dictionary.dict  non-tdk.dict  proper-from-corpus.dict
